fixed iphone layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ h1 {
 	margin-top:14px;
 	font-family: 'Roboto Condensed', sans-serif;
 }
+.container>.navbar-header {
+	margin-left:0;
+	margin-right:0;
+}
 .navbar-default .navbar-brand {
 	height:58px;
 	padding:10px 0;
@@ -61,9 +65,9 @@ h1 {
 /* new */
 .navbar-default .navbar-collapse {
 	border:0;
-	background: #6CADCB;
+	background:#6CADCB;
     color: #000;
-    margin-top: 10px;
+    margin-top:15px;
 }
 .navbar-default .navbar-toggle {
 	margin-top:20px;
@@ -82,7 +86,6 @@ h1 {
 /* end of new */
 .the-hero {
 	width:100%;
-	/*height:394px;*/
 	background:#333333 url('../images/hp-hero.jpg') no-repeat center top;
 	background-size: 100% 100%;
 	-webkit-background-size: cover;
@@ -109,7 +112,6 @@ h1 {
 	background-color:#E6E6E6;
 }
 .hp-intro {
-	/*height:338px;*/
 	padding-bottom:40px;
 	background:#E6E6E6 url('../images/grey-tile.jpg');
 }
@@ -124,7 +126,6 @@ h1 {
 	color:#fff;
 }
 .hp-services {
-	/*height:358px;*/
 	padding-bottom:30px;
 }
 .hp-services h1 {
@@ -173,7 +174,6 @@ h1 {
 .hp-the-book {
 	text-align:center;
 	padding-bottom:15px;
-/*	height:516px;*/
 }
 .hp-the-book .header {
 	border-bottom:1px solid #979797;
@@ -182,20 +182,13 @@ h1 {
 .hp-the-book .header h1 {
 	font-size:28px;
 }
-.hp-the-book .container {
-	padding:0 86px;
-}
 .hp-the-book .item {
-	/*float:left;*/
-	/*width:100%;*/
-	/*height:331px;*/
 	background-color:#333;
 	color:#fff;
 	font-family: 'Roboto Condensed', sans-serif;
 	padding-top:110px;
 	padding-bottom:110px;
 	margin-bottom:15px;
-	/*margin-right:48px;*/
 }
 .hp-the-book h2 {
 	font-size:30px;
@@ -210,7 +203,6 @@ h1 {
 	background:url('../images/hp-book-you.jpg');
 }
 .hp-the-book .part-two {
-	/*width:302px;*/
 	background:url('../images/hp-book-them.jpg');
 }
 .hp-the-book .part-three {
@@ -229,7 +221,6 @@ h1 {
 	background-color:#6CADCB;
 }
 .hp-testimonials {
-	/*height:252px;*/
 	padding-bottom:30px;
 }
 .hp-testimonials .header {
@@ -251,7 +242,6 @@ h1 {
 	margin-top:20px;
 }
 .global-footer {
-	/*height:223px;*/
 	padding-bottom:20px;
 	text-align:center;
 	font-size:12px;
